Weapon uses collision on tick + Preview capsule

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -127,6 +127,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonPlayerController",NewClassName="UltimateCppPlayerController")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="UltimateCppCharacter")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="UltimateCppGameMode")
+bUseFixedFrameRate=False
+FixedFrameRate=120.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -145,3 +147,7 @@ ManualIPAddress=
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/UltimateCpp.SlashCharacter.EquippedWeapon",NewName="/Script/UltimateCpp.SlashCharacter.CurrentWeapon")
 +FunctionRedirects=(OldName="/Script/UltimateCpp.SlashCharacter.GetWeapon",NewName="/Script/UltimateCpp.SlashCharacter.GetCurrentWeapon")
+
+[/Script/Engine.AnimationSettings]
+DefaultFrameRate=(Numerator=60,Denominator=1)
+
