Split Montage Manager into Weapon and Character categories

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -147,6 +147,7 @@ ManualIPAddress=
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/UltimateCpp.SlashCharacter.EquippedWeapon",NewName="/Script/UltimateCpp.SlashCharacter.CurrentWeapon")
 +FunctionRedirects=(OldName="/Script/UltimateCpp.SlashCharacter.GetWeapon",NewName="/Script/UltimateCpp.SlashCharacter.GetCurrentWeapon")
++ClassRedirects=(OldName="SlashItem_Weapon", NewName="BC_ItemWeapon")
 
 [/Script/Engine.AnimationSettings]
 DefaultFrameRate=(Numerator=60,Denominator=1)
